[project]
name = "uwbtk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "tmp@tmp.xio" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
uwbtk = "uwbtk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
